--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap');
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-display: 'Maven Pro', cursive;
+  --font-display: var(--font-maven-pro), cursive;
 
   --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
   --background-image-gradient-conic: conic-gradient(
